src/objects/REVVY__MnQuoteSolution__c.object
<CustomObject>
    <fields>
        <fullName>OCD_ExtID__c</fullName>
        <externalId>true</externalId>
        <label>OCD ExtID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__CatalogNode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Unique ID of the product associated with this solution</description>
        <inlineHelpText>Unique ID of the product associated with this solution</inlineHelpText>
        <label>Product</label>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>QuoteSolutions</relationshipLabel>
        <relationshipName>QuoteSolutions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__ExtId__c</fullName>
        <description>Unique ID for each record that can be used as an external ID for importing and exporting data.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for each record that can be used as an external ID for importing and exporting data.</inlineHelpText>
        <label>Quote Solution Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__IsConfigurationComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates whether the configuration is complete for this solution</description>
        <inlineHelpText>Flag indicates whether the configuration is complete for this solution</inlineHelpText>
        <label>Needs Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsItemsConfigurationComplete__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag indicates whether the configuration is complete for the configurable products within this solution</description>
        <inlineHelpText>Flag indicates whether the configuration is complete for the configurable products within this solution</inlineHelpText>
        <label>Items Need Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipLabel>QuoteSolutions</relationshipLabel>
        <relationshipName>QuoteSolutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REVVY__SolutionConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique ID of the model used to configure this solution</description>
        <inlineHelpText>Unique ID of the model used to configure this solution</inlineHelpText>
        <label>Solution Configuration Id</label>
        <referenceTo>REVVY__MnConfigEngineModel__c</referenceTo>
        <relationshipLabel>QuoteSolutions</relationshipLabel>
        <relationshipName>QuoteSolutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Solution_Name_F__c</fullName>
        <formula>REVVY__CatalogNode__r.REVVY__LocaleName_F__c</formula>
        <label>Solution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_ExtId_F__c</fullName>
        <formula>Value(REVVY__ExtId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution ExtId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>